--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "app-final",
+  "name": "Backend-App",
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "dependencies": {
     "body-parser": "^1.0.2",
